<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:theme="@style/Theme.TheMovieDb"
    tools:context=".ui.detail.MovieDetailActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivThumbnail"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTitleDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="32sp"
        android:text="@string/title"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ivThumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnShare"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_share"
        app:layout_constraintTop_toBottomOf="@id/ivThumbnail"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvRateDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"
        android:text="@string/_79"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDetail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvReleaseDateDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        android:text="@string/release_date"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvRateDetail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDescriptionDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvReleaseDateDetail"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddWatchList"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="24dp"
        app:backgroundTint="@color/crimson"
        android:text="@string/add_to_watch_list"
        app:icon="@drawable/ic_favorite_border"
        app:iconGravity="textStart"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvDescriptionDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:trackColor="@color/white"
        android:indeterminate="true"
        app:indicatorSize="@dimen/_50sdp"
        app:indicatorColor="@color/crimson"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>