...
                    android:layout_marginStart="8dp"
                    android:text="@string/tv_show"/>

            </com.google.android.material.chip.ChipGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFavoriteMovie"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:listitem="@layout/item_movie"
                tools:itemCount="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chipGroup"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFavoriteShow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:listitem="@layout/item_movie"
                tools:itemCount="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
